feat: repository tests